--- a/program_34/index.html
+++ b/program_34/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>contact</li>
+
+        </ul>
+    </nav>
     <h1>Learning Java_Script</h1>
     <script src="script.js"></script>
 </body>
