--- a/program_47/index.html
+++ b/program_47/index.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning Java_Script</title>
+    <title>Events</title>
 </head>
-
 <body>
-    <div>
-    <h1>Learning Java_Script</h1>
-
-    </div>
-    <div>
-        <button id="joke-btn" onclick='find_new()'>New Joke's</button>
+    <div class="container">
+        <button id="btn">Click me</button>
     </div>
     <script src="script.js"></script>
 </body>
-
 </html>
